[package]
name = "dj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-win = "4.5.0"
common_macros = "0.1.1"
once_cell = "1.17.1"
read_input = "0.8.6"
serde = "1.0.160"
serde_json = "1.0.96"